--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>From the Src Dir</h1>
+		<h1>Hello World</h1>
 		<script src="bundle.js"></script>
 	</body>
 </html>
