working on webpack production config

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
 			<tbody id="users"></tbody>
 		</table>
 
-		<script src="bundle.js"></script>
+		<!-- <script src="bundle.js"></script> -->
 	</body>
 </html>
